--- a/public/css/adjustments_bootstrap_advanced_presenter.less
+++ b/public/css/adjustments_bootstrap_advanced_presenter.less
@@ -6,11 +6,16 @@
 //
 ////////////////////////////////
 
-
-
 @import 'color_definitions_theme_1.less';
 
+#content {
+    display: block;
 
+    > * {
+      width: 100%;
+      max-width: 100%;
+    }
+}
 
 .cf:before,
 .cf:after {
